playbooks/files/kubernetes/keycloack.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:18.0.2
        args: ["start-dev"]
        volumeMounts:
          - mountPath: /opt/keycloak.json
            name: realm-file
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /realms/master
            port: 8080
      volumes:
        - name: realm-file
          hostPath:
          path : /opt/keycloak.json
          type: File
