playbooks/files/kubernetes/spring-boot-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f .\docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: spring-boot-app
  name: spring-boot-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: spring-boot-app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f .\docker-compose.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: spring-boot-app
    spec:
      containers:
        - name: spring-boot-app
          image: localhost:32000/spring-boot-app:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
