playbooks/files/kubernetes/keycloak.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: keycloak
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:18.0.2
        args: ["start-dev"]
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /realms/master
            port: 8080
        volumeMounts:
                  - name: host-mount
                    mountPath: /opt
      volumes:
        - name: host-mount
          hostPath:
            # https://kubernetes.io/docs/concepts/storage/volumes/#hostpath
            # Linux: /home/jyee/simplest-k8s/host-mount
            # macOS: /Users/yourusername/path/to/repo/simplest-k8s/host-mount
            path: /opt
